# nine

./: .gitignore  CMakeLists.txt  README.md  analyse_circuits.py
Source/: NineController.cpp  NineController.h  NineFactory.cpp  NineIDs.h  NineProcessor.cpp  NineProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/circuits/: TR909BassDrum.cpp  TR909BassDrum.h  TR909Clap.cpp  TR909Clap.h  TR909RimShot.cpp  TR909RimShot.h  TR909SnareDrum.cpp  TR909SnareDrum.h  TR909Tom.cpp  TR909Tom.h  WaveDigitalFilter.h
